# DBx1000-Tree

./: .gitignore  CMakeLists.txt  Makefile  config-std.h  config.cpp  config.h
benchmarks/: TEST_schema.txt  test.h  test_txn.cpp  test_wl.cpp  tpcc.h  tpcc_query.cpp  tpcc_txn.cpp
concurrency_control/: aet_cc_policy.h  aet_hybrid.cpp  aet_hybrid_cc.cpp  aet_reserve.cpp  occ.cpp  row_aet_hybrid.cpp  row_aet_hybrid.h  row_occ.cpp  row_occ.h  row_silo.cpp  row_silo.h  silo.cpp
data_agent/branch/: branch.h  branch_manager.cpp  branch_manager.h
data_agent/client/: task_api.cpp  task_api.h
data_agent/common/: types.h
data_agent/intent/: intent.h  intent_manager.cpp  intent_manager.h
data_agent/object_store/: dbx1000_object_store.cpp  dbx1000_object_store.h  dbx1000_row_bridge.cpp  dbx1000_row_bridge.h  dbx1000_test_backend.cpp  dbx1000_test_backend.h  object.h  object_store.h
data_agent/operators/: branch_evaluate_op.cpp  branch_evaluate_op.h  candidate_generate_op.cpp  candidate_generate_op.h  transactional_apply_op.cpp  transactional_apply_op.h  winner_select_op.cpp  winner_select_op.h
data_agent/runtime/: task_context.h  task_runtime.cpp  task_runtime.h
data_agent/transaction/: txn_context.h  txn_manager.cpp  txn_manager.h
docs/: DBx1000_Tree_AET_CC_roadmap.md  DBx1000_Tree_rule_based_AET_CC_next_steps.md  aet_hybrid_branch_scaling_analysis.md  aet_hybrid_cc_stock_update_report.md  agent_tree_reserve_tpcc_design.md  current_code_mapping.md  data_agent_real_backend_status.md  data_agent_system_design.md  data_agent_system_project_structure.md  dbx1000_tree_data_agent_refactor_plan.md  tree_reserve_migration_guide.md
docs/final_branch_scaling_report/: branch_scaling_summary.csv  branch_scaling_table.md
scripts/: analyze_tpcc_semantic_vs_traditional.py  run_data_agent_compare.sh  run_data_agent_synthetic.sh  run_tpcc_compare.sh  run_tpcc_semantic_vs_traditional.sh
storage/: row.cpp  row.h
system/: agent_txn.cpp  agent_txn.h  global.cpp  global.h  main.cpp  parser.cpp  stats.cpp  stats.h  thread.cpp  txn.cpp  txn.h  wl.cpp
workloads/synthetic/: synthetic_loader.cpp  synthetic_loader.h  synthetic_runner.cpp  synthetic_task_generator.cpp  synthetic_task_generator.h
